<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_dashboard"
        android:title="@string/text_dashboard_bottom_navigation"
        android:icon="@drawable/ic_dashboard_black_24dp"/>
    <item
        android:id="@+id/action_history"
        android:title="@string/text_history_bottom_navigation"
        android:icon="@drawable/ic_history_black_24dp"/>
    <item
        android:id="@+id/action_stats"
        android:title="@string/text_stats_bottom_navigation"
        android:icon="@drawable/ic_graphic_eq_black_24dp"/>
    <item
        android:id="@+id/action_setting"
        android:title="@string/text_setting_bottom_navigation"
        android:icon="@drawable/ic_settings_black_24dp"/>


</menu>